--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ language: 'ko-kr'
 words_per_minute: 200
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl:
+baseurl: //
 
 # Website info
 title: bello
@@ -70,8 +70,8 @@ lsi: False
 username: jekyller
 repo: jasper2
 branch: master
-relative_source: ../jasper2/
-destination: ../jasper2-pages/
+relative_source: ./
+destination: ./site
 production_url:  https://jekyller.github.io/jasper2/
 source_url:  https://github.com/jekyller/jasper2/
 
