--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -1,16 +1,8 @@
-speeches:
-  name: speeches
-  description: Some of the greatest words ever spoken.
-  cover: assets/images/speeches.jpg
-fiction:
-  name: fiction
-  description: False
+portfolio:
+  name: portfolio
+  description: portfolio
   cover: False
-fables:
-  name: fables
-  description: A series of short stories that make you think.
-  cover: assets/images/fables.jpg
-getting-started:
-  name: getting-started
-  description: False
+devlog:
+  name: devlog
+  description: log
   cover: False
