--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,7 +4,7 @@ seyoon:
   location: SEOUL, South Korea
   url_full: False
   url: False
-  bio: bio here
+  bio: iOS Developer
   picture: False
   facebook: False
   twitter: False
